--- a/01-Intro/homework.ipynb
+++ b/01-Intro/homework.ipynb
@@ -7,13 +7,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from groq import Groq\n",
-    "import os"
+    "from groq import Groq"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "8900d6c9-6b0b-4178-8397-fa469dfb71ec",
    "metadata": {},
    "outputs": [],
