open source llms

--- a/02-Intro_rag/rag_intro_phi3mini.ipynb
+++ b/02-Intro_rag/rag_intro_phi3mini.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c0323f43-3b43-4ed1-a562-1674dcd897e1",
+   "id": "4f7915c7-c7cb-408f-b3a9-ac1fedbd827b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8a204ed4-c7ca-44b8-8d7e-11fab6bf25aa",
+   "id": "8ff05446-e896-4557-8d95-f36f89c41026",
    "metadata": {},
    "outputs": [
     {
@@ -22,12 +22,12 @@
      "output_type": "stream",
      "text": [
       "Filesystem      Size  Used Avail Use% Mounted on\n",
-      "overlay          32G   12G   19G  39% /\n",
+      "overlay          32G   19G   12G  62% /\n",
       "tmpfs            64M     0   64M   0% /dev\n",
       "shm              64M     0   64M   0% /dev/shm\n",
-      "/dev/root        29G   24G  5.8G  81% /vscode\n",
-      "/dev/loop3       32G   12G   19G  39% /workspaces\n",
-      "/dev/sda1        44G  300M   42G   1% /tmp\n"
+      "/dev/root        29G   24G  5.5G  82% /vscode\n",
+      "/dev/loop3       32G   19G   12G  62% /workspaces\n",
+      "/dev/sdb1        44G  7.2G   35G  18% /tmp\n"
      ]
     }
    ],
@@ -38,57 +38,75 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "16687a78-5e6c-41d0-a79b-c15f5e6f41a4",
+   "id": "48c81482-7173-4f4c-95cd-383b55fd7a86",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# run this notebook in following directory as well as the downloads\n",
-    "\n",
-    "import os\n",
+    "import os \n",
     "os.environ['HF_HOME'] = '/tmp/cache/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "dcc11280-1343-4df6-86c5-70452b562125",
+   "execution_count": null,
+   "id": "864ae143-6bd1-4d3a-9b06-6f16228b8fdb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# with GPU\n",
+    "# import torch\n",
+    "# from transformers import AutoModelForCausalLM, AutoTokenizer, pipeline\n",
+    "\n",
+    "# torch.random.manual_seed(0)\n",
+    "\n",
+    "# model = AutoModelForCausalLM.from_pretrained(\n",
+    "#     \"microsoft/Phi-3-mini-128k-instruct\", \n",
+    "#     device_map=\"cuda\", \n",
+    "#     torch_dtype=\"auto\", \n",
+    "#     trust_remote_code=True, \n",
+    "# )\n",
+    "# tokenizer = AutoTokenizer.from_pretrained(\"microsoft/Phi-3-mini-128k-instruct\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1ee880c-7338-457e-bcd8-00ba69e74d50",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "You are using the default legacy behaviour of the <class 'transformers.models.t5.tokenization_t5.T5Tokenizer'>. This is expected, and simply means that the `legacy` (previous) behavior will be used so nothing changes for you. If you want to use the new behaviour, set `legacy=False`. This should only be set if you understand what it means, and thoroughly read the reason why this was added as explained in https://github.com/huggingface/transformers/pull/24565\n",
-      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
+      "`flash-attention` package not found, consider installing for better performance: No module named 'flash_attn'.\n",
+      "Current `flash-attenton` does not support `window_size`. Either upgrade or use `attn_implementation='eager'`.\n",
+      "Loading checkpoint shards:   0%|               | 0/2 [00:00<?, ?it/s]"
      ]
     }
    ],
    "source": [
-    "# sentence --> tokenization --> model output --> detokenization(decode) --> result (human sentence)\n",
+    "# phi3-mini implementation \n",
     "\n",
-    "from transformers import T5Tokenizer, T5ForConditionalGeneration\n",
+    "import torch\n",
+    "from transformers import AutoModelForCausalLM, AutoTokenizer, pipeline\n",
     "\n",
-    "tokenizer = T5Tokenizer.from_pretrained(\"google/flan-t5-xl\")\n",
-    "model = T5ForConditionalGeneration.from_pretrained(\"google/flan-t5-small\")"
+    "# reproduceble \n",
+    "torch.random.manual_seed(0)\n",
+    "\n",
+    "model = AutoModelForCausalLM.from_pretrained(\n",
+    "    \"microsoft/Phi-3-mini-128k-instruct\", \n",
+    "    torch_dtype=torch.float32, \n",
+    "    trust_remote_code=True, \n",
+    ")\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"microsoft/Phi-3-mini-128k-instruct\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "b90d1941-8b3f-4921-b303-9c7d8a4c5b0c",
+   "execution_count": null,
+   "id": "5481fab0-ea39-4abf-8aab-f1384ccebb0f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<minsearch.Index at 0x7becd245bf40>"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests \n",
     "import minsearch\n",
@@ -116,8 +134,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "7bbe00bc-ad5b-4171-8585-0e474dba8884",
+   "execution_count": null,
+   "id": "90b7293d-9ad7-49b2-b24b-a1e860145216",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,12 +154,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "9917812b-6bd2-4ac6-9244-acfe6efd547b",
+   "execution_count": null,
+   "id": "a45eb332-28d7-48b8-8071-def623bc6c03",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def build_prompt(query, search_results):\n",
     "    prompt_template = \"\"\"\n",
     "    You're a course teaching assistant. Answer the QUESTION based on the CONTEXT from the FAQ database.\n",
@@ -164,33 +181,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "be7124f9-d056-4501-a22e-07ea55a79818",
+   "execution_count": null,
+   "id": "b4a20a82-966b-483a-9aaf-00e379951581",
    "metadata": {},
    "outputs": [],
    "source": [
-    "`def llm(prompt, generate_params=None):\n",
-    "    if generate_params is None:\n",
-    "        generate_params = {}\n",
-    "\n",
-    "    input_ids = tokenizer(prompt, return_tensors=\"pt\").input_ids.to()\n",
-    "    outputs = model.generate(\n",
-    "        input_ids,\n",
-    "        max_length=generate_params.get(\"max_length\", 100),\n",
-    "        num_beams=generate_params.get(\"num_beams\", 5),\n",
-    "        do_sample=generate_params.get(\"do_sample\", False),\n",
-    "        temperature=generate_params.get(\"temperature\", 1.0),\n",
-    "        top_k=generate_params.get(\"top_k\", 50),\n",
-    "        top_p=generate_params.get(\"top_p\", 0.95),\n",
+    "def llm(prompt):\n",
+    "    messages = [\n",
+    "        {\"role\": \"user\", \"content\": prompt},\n",
+    "    ]\n",
+    "    \n",
+    "    # combine model and tokenizer \n",
+    "    pipe = pipeline(\n",
+    "        \"text-generation\",\n",
+    "        model=model,\n",
+    "        tokenizer=tokenizer,\n",
     "    )\n",
-    "    result = tokenizer.decode(outputs[0], skip_special_tokens=True)\n",
-    "    return result`"
+    "    \n",
+    "    generation_args = {\n",
+    "        \"max_new_tokens\": 500,\n",
+    "        \"return_full_text\": False,\n",
+    "        \"temperature\": 0.0,\n",
+    "        \"do_sample\": False,\n",
+    "    }\n",
+    "    \n",
+    "    output = pipe(messages, **generation_args)\n",
+    "    return output[0]['generated_text']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "bd8ad995-3ae3-4e82-a197-5384c4e52d6e",
+   "execution_count": null,
+   "id": "bc18fbfb-e898-45e8-99eb-f23486c06c66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,32 +225,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "26676ba8-0f78-427d-9c0b-7364f8c97a79",
+   "execution_count": null,
+   "id": "5c73465c-b878-4e1f-934b-704fb2c54319",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Yes, the slack channel remains open and you can ask questions there. But always sDocker containers exit code w search the channel first and second, check the FAQ (this document), most likely all your questions are already answered here. You can also tag the bot @ZoomcampQABot to help you conduct the search, but don’t rely on its answers 100%, it is pretty good though.'"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "rag(\"The course has already started, Can I still join in?\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "acf1afb6-3e26-4d5a-aaad-486289f32b49",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
