open source llms

--- a/02-Intro_rag/intro_rag_ollama_elasticsrh.ipynb
+++ b/02-Intro_rag/intro_rag_ollama_elasticsrh.ipynb
@@ -12,6 +12,9 @@
     "# text search, handle structured and aggregate data\n",
     "# Often faster solution than Hadoop/Spark...\n",
     "\n",
+    "# documents - things you're searching for has ID and type (database)\n",
+    "# types - define schema and mapping shared by documents (table)\n",
+    "# indices - collection of types inverted indicies (collection of docs) (row)\n",
     "from openai import OpenAI\n",
     "from elasticsearch import Elasticsearch\n",
     "import os"
@@ -103,7 +106,7 @@
    "source": [
     "index_settings = {\n",
     "    \"settings\": {\n",
-    "        \"number_of_shards\":1, # inverted index of docs\n",
+    "        \"number_of_shards\":1, # self contained instance \n",
     "        \"number_of_replicas\":0\n",
     "    },\n",
     "    \"mappings\": {\n",
